# experiment-tauri

./: .env  README.md  bun.lockb  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/utils/: LocalStore.ts
